Begin work on guild settings page

--- a/website/static/html/index.html
+++ b/website/static/html/index.html
@@ -12,6 +12,9 @@
     <script src="/static/build.js"></script>
   </head>
   <body>
+    <noscript>
+      <h1>Please enable JavaScript.</h1>
+    </noscript>
     <div id="loader" hidden>
       <center>
         <img src="/static/images/censorbotalt.png">
