--- a/website/static/html/dashboard_home.html
+++ b/website/static/html/dashboard_home.html
@@ -1,4 +1,8 @@
 <center>
   <h1>Dashboard</h1>
+  <a id="discord" href="/dashboard" class="button">Discord</a>
+  <a disabled title="Coming soon!" id="twitch" href="/dashboard/twitch" class="button">Twitch</a>
+  <a id="premium" href="/dashboard/premium" class="button">Premium</a>
+  <div />
 </center>
 <div id="guilds"></div>
