Massive changes, finalized look and animations of inputs, and began guild settings

--- a/website/static/html/dashboard_home.html
+++ b/website/static/html/dashboard_home.html
@@ -1,6 +1,6 @@
 <center>
   <h1>Dashboard</h1>
-  <a id="discord" href="/dashboard" class="button">Discord</a>
+  <a id="discord" href="/dashboard" class="button">&gt; Discord &lt;</a>
   <a disabled title="Coming soon!" id="twitch" href="/dashboard/twitch" class="button">Twitch</a>
   <a id="premium" href="/dashboard/premium" class="button">Premium</a>
   <div />
