--- a/website/static/html/index.html
+++ b/website/static/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Censor Bot</title>
-    <link rel="stylesheet" href="/static/css/index.css">
+    <style id="indcss"></style>
     <style id="css"></style>
     <style id="css2"></style>
 
