Finished guild settings and began premium backend

--- a/website/static/html/dashboard_home.html
+++ b/website/static/html/dashboard_home.html
@@ -1,8 +1,8 @@
 <center>
   <h1>Dashboard</h1>
-  <a id="discord" href="/dashboard" class="button">&gt; Discord &lt;</a>
-  <a disabled title="Coming soon!" id="twitch" href="/dashboard/twitch" class="button">Twitch</a>
-  <a id="premium" href="/dashboard/premium" class="button">Premium</a>
+  <Button=/dashboard disabled selected id="discord">Discord</Button>
+  <Button=/dashboard/twitch unselected title="Coming soon!" id="twitch">Twitch</Button>
+  <Button=/dashboard/premium unselected id="premium">Premium</Button>
   <div />
 </center>
 <div id="guilds"></div>
