--- a/website/static/html/landing.html
+++ b/website/static/html/landing.html
@@ -4,14 +4,13 @@
   <h1 class="important">The bot that keeps your server clean</h1>
   <h4>So you don't have to.</h4>
   <span id="buttons">
-    <a class="button" href="/test">Invite</a>
-    <a class="button" href="/dashboard">Customize</a>
-    <br />
-    <a class="button special" href="https://censor.bot/premium">Premium</a>
+    <Button=/test>Invite</Button>
+    <Button=/dashboard>Customize</Button>
+    <Button=/premium special>Premium</Button>
   </span>
 </div>
 <div id="info">
-  <a class="button" id="scroll">Learn More</a>
+  <Button id="scroll">Learn More</Button>
   <center>
   <section>
     <h1 class="important">
@@ -27,7 +26,7 @@ It comes with pre-built filters that are managed by our staff, to keep it up to 
       How does it work?
     </h1>
     <article>
-      Unlike traditional bots, where words are added over time, Censor Bot creates a base list of combinations, and then add words that shouldn’t be censored. This makes it much more likely to catch a curse
+      Unlike traditional bots, where words are added over time, Censor Bot creates a base list of combinations, and then add words that shouldn’t be censored. This makes it much more likely to catch a curse.
     </article>
   </section>
   <section>
