--- a/website/static/html/error.html
+++ b/website/static/html/error.html
@@ -2,5 +2,5 @@
   <h1 id="error">Error</h1>
   <h2 id="title">Loading...</h2>
   <p id="info">Loading...</p>
-  <a class="button" id="button" clicky>Loading...</a>
+  <Button id="button" clicky>Loading...</Button>
 </center>
