Began transition to new premium addition workflow, began premium page

--- a/website/static/html/guild_settings.html
+++ b/website/static/html/guild_settings.html
@@ -3,6 +3,10 @@
 <center>
   <h1 id="name">Loading...</h1>
   <Button=/dashboard>Back</Button>
+  <br />
+  <br />
+  <h4>Premium <br />(Using <span id="pused">Loading...</span> / <span id="ptotal">Loading...</span> servers):</h4>
+  <Switch.premium id="premium">
 </center>
 <br />
 <div id="settings">
