--- a/website/static/html/premium.html
+++ b/website/static/html/premium.html
@@ -1,8 +1,5 @@
 <center>
-  <h1>Premium</h1>
-  <h2>Already have premium? Set them up:</h2>
-
-  <Button=/dashboard/premium>Premium Dashboard</Button>
+  <h1><Star>Censor Bot Premium<Star></h1>
 
   <section id="premium">
     <div>
@@ -31,7 +28,70 @@
       <Button id="own_instance" special>Join</Button>
     </div>
   </section>
-  <section>
-    <h2></h2>
-  </section>
-</center>  
+  <small style="grid-column: span 3">All transactions and subscriptions are handled through patreon.</small>
+</center>
+<div class="sep"></div>
+<section>
+  <center>
+    <h2>Premium Server Perks</h2>
+    <p>All settings marked with a <Star> can be changed in your server's dashboard. These perks are:</p>  
+  </center>
+  <div id="perks">
+    <div>
+      <h3>Resend</h3>
+      <p>Whenever someone curses, it send the users message again with curse words blocked out using spoilers, hashtags, or stars. Creating the illusion of a message that has the curse removed.</p>
+    </div>
+    <div>
+      <h3>Multi-Line</h3>
+      <p>This combines a line of messages from the same user to create one full message, this removes the ability to bypass the bot using multiple messages.</p>
+    </div>
+    <div>
+      <h3>Font Recognition</h3>
+      <p>Heavily maintained and accurate font recognition, removing a users ability to bypass curses using character lookalikes.</p>
+    </div>
+    <div>
+      <h3>Ignore Channels</h3>
+      <p>Gives you the ability to set a list of channels to completely ignore curses from, rather than requiring you to set them to NSFW.</p>
+    </div>
+    <div>
+      <h3>Increased Maximums</h3>
+      <p>A list of increases:
+        <ul>
+          <li>Filter: Maximum words from 150 to 1500</li>
+          <li>Uncensor List: Maximum words from 150 to 1500</li>
+          <li>Pop Message: Delete after time from 120 seconds to 600</li>
+          <li>Pop message: Max content size from 200 characters to 1000</li>
+        </ul>
+      </p>
+    </div>
+    <div>
+      <h3>Less noteable:</h3>
+      <p>
+        <ul>
+          <li>DM Command Responses: Makes responses to commands respond in the invokers DM's rather than in the same channel.</li>
+          <li>Long lasting HelpME codes, allowing staff to diagnose your problem over the span of months.</li>
+        </ul>
+      </p>
+    </div>
+  </div>
+</section>
+<div class="sep"></div>
+<section>
+  <center>
+    <h2>Beta Features</h2>
+    <i>Currently there are no available beta features, check back later!</i>
+  </center>
+</section>
+<div class="sep"></div>
+<section id="howto">
+  <center>
+    Already have premium? Here's how to set it up.
+  </center>
+  <ul>
+    <li>First of all, make sure you Discord account is connected in the <a href="https://www.patreon.com/settings/apps" target="_blank">integrations settings</a>.</li>
+    <li>This should push you into the JPBBot's server. Do not leave the server, your premium status is connected to the role in the server.</li>
+    <li>Ensure you have said role, if you do continue to the next step, if you don't, make sure your Discord is connected or contact JPBBerry#0001</li>
+    <li>To enable premium features, go to the <a clicky href="/dashboard">dashboard</a>, go to your server, and press the premium slider at the top.</li>
+    <li>And that's it! All the Premium<Star> features will be toggleable to your liking. Enjoy! And thank you for supporting us!</li>
+  </ul>
+</section>
