--- a/website/static/html/index.html
+++ b/website/static/html/index.html
@@ -26,12 +26,15 @@
       Censor Bot
       </h3>
       <span>
-        <a href="https://censor.bot/support"><div>Support</div></a>
+        <a href="/support" target="_blank"><div>Support</div></a>
         <a>
           <div id="login">Loading...</div>
         </a>
       </span>
     </nav>
     <div id="root"></div>
+    <div id="toast" onclick="this.setAttribute('gone', '')" gone>
+
+    </div>
   </body>
 </html>
