--- a/website/static/html/premium.html
+++ b/website/static/html/premium.html
@@ -4,28 +4,32 @@
   <section id="premium">
     <div>
       <h3>Supporter</h3>
+      <h4>$5/month</h4>
       <ul>
         <li>3 Premium Servers</li>
         <li>Premium Support</li>
       </ul>
-      <Button id="supporter" special>Join</Button>
+      <Button="https://www.patreon.com/join/censorbot/checkout?rid=3106140" target="_blank" id="supporter" special>Join</Button>
     </div>
     <div>
       <h3>Super Supporter</h3>
+      <h4>$10/month</h4>
       <ul>
         <li>6 Premium Servers</li>
         <li>Premium Support</li>
         <li>Beta Access</li>
       </ul>
-      <Button id="super_supporter" special>Join</Button>
+      <Button="https://www.patreon.com/join/censorbot/checkout?rid=3106142" target="_blank" id="super_supporter" special>Join</Button>
     </div>
     <div>
-      <h3>Gamer</h3>
+      <h3>Own Instance</h3>
+      <h4>$25/month</h4>
       <ul>
-        <li>abc</li>
-        <li>def</li>
+        <li>Hosting attached to any bot you own.</li>
+        <li>Custom avatar/username</li>
+        <li>Extra feature requests allowed!</li>
       </ul>
-      <Button id="own_instance" special>Join</Button>
+      <Button="https://www.patreon.com/join/censorbot/checkout?rid=6590243" target="_blank" id="own_instance" special>Join</Button>
     </div>
   </section>
   <small style="grid-column: span 3">All transactions and subscriptions are handled through patreon.</small>
