--- a/website/static/html/landing.html
+++ b/website/static/html/landing.html
@@ -34,7 +34,7 @@ It comes with pre-built filters that are managed by our staff, to keep it up to 
       Getting started
     </h1>
     <article>
-      Ready to get the next level of cleanliness in your server? Get started by just [inviting] the bot and it will instantly start cleaning your server. Want to change it up? Head over to the [dashboard], and you will have full control over what happens.
+      Ready to get the next level of cleanliness in your server? Get started by just <a href="/invite" target="_blank">inviting</a> the bot and it will instantly start cleaning your server. Want to change it up? Head over to the <a href="/dashboard">dashboard</a>, and you will have full control over what happens.
     </article>
   </section>
   </center>
