Start and refine dropdown user menu & add dev controls

--- a/website/static/html/index.html
+++ b/website/static/html/index.html
@@ -26,10 +26,16 @@
       Censor Bot
       </h3>
       <span>
-        <a href="/support" target="_blank"><div>Support</div></a>
-        <a>
+        <div style="position: relative">
           <div id="login">Loading...</div>
-        </a>
+          <div id="menu" hidden>
+            <a href="/">Home</a>
+            <a href="/dashboard">Dashboard</a>
+            <a href="/support" target="_blank">Support</a>
+            <a href="/premium">Premium</a>
+            <a id="logout" function>Logout</a>
+          </div>
+        </div>
       </span>
     </nav>
     <div id="root"></div>
