--- a/website/static/html/index.html
+++ b/website/static/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: #2d4059" lang="en">
+<html style="background-color: #333b52" lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Censor Bot</title>
