Finish admin page and start adding leisure pages

--- a/website/static/html/index.html
+++ b/website/static/html/index.html
@@ -33,14 +33,13 @@
             <a href="/dashboard">Dashboard</a>
             <a href="/support" target="_blank">Support</a>
             <a href="/premium">Premium</a>
+            <a href="/admin" class="adminshow" hidden>Admin</a>
             <a id="logout" function>Logout</a>
           </div>
         </div>
       </span>
     </nav>
     <div id="root"></div>
-    <div id="toast" onclick="this.setAttribute('gone', '')" gone>
-
-    </div>
+    <div id="toast" onclick="this.setAttribute('gone', '')" gone></div>
   </body>
 </html>
