Move to scss, fix firefox/moz bugs

--- a/website/static/html/landing.html
+++ b/website/static/html/landing.html
@@ -4,7 +4,7 @@
   <h1 class="important">The bot that keeps your server clean</h1>
   <h4>So you don't have to.</h4>
   <span id="buttons">
-    <Button=/test>Invite</Button>
+    <Button=/invite target="_blank">Invite</Button>
     <Button=/dashboard>Customize</Button>
     <Button=/premium special>Premium</Button>
   </span>
