--- a/website/static/html/index.html
+++ b/website/static/html/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html style="background-color: #333b52" lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <title>Censor Bot</title>
-    <style id="indcss"></style>
+    {INDCSS}
     <style id="css"></style>
     <style id="css2"></style>
 
     <link rel="icon" href="https://branding.jt3ch.net/censorbot.png">
 
-    <script src="/static/build.js"></script>
+    <script>{JS}</script>
   </head>
   <body>
     <noscript>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
       <h1>Please enable JavaScript.</h1>
     </noscript>
     <div id="loader" hidden>
