Reformatted directory and new build method

--- a/website/html/index.html
+++ b/website/html/index.html
@@ -22,7 +22,7 @@
     </noscript>
     <div id="loader" hidden>
       <center>
-        <img src="/static/images/censorbotalt.png">
+        <img src="https://branding.jt3ch.net/censorbotalt.png">
         <h2 id="loadtext">Loading...</h2>
       </center>
     </div>
