Finalize, ready for production

--- a/website/html/index.html
+++ b/website/html/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html style="background-color: #333b52" lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0">
     <title>Censor Bot</title>
     {INDCSS}
     <style id="css"></style>
     <style id="css2"></style>
+
+    <meta property="og:image" content="https://branding.jt3ch.net/censorbot.png">
+    <meta name="theme-color" content="#ff3d00">
+    <meta property="og:title" content="Censor Bot">
+    <meta property="og:description" content="Easy to use advanced content filtering for your Discord server(s)!">
+    <meta name="description" content="Advanced Anti-Swear Bot that comes with a pre-built filters, no work needed! anti swear bot">
 
     <link rel="icon" href="https://branding.jt3ch.net/censorbot.png">
 
