--- a/website/html/landing.html
+++ b/website/html/landing.html
@@ -1,8 +1,8 @@
-<img id="logo" src="https://branding.jt3ch.net/censorbotalt.png" alt="Censor Bot"
+<img id="logo" src="https://branding.jt3ch.net/censorbotalt.png" width="512px" height="512px" alt="Censor Bot"
   class="rollon">
 <div id="title">
   <h1 class="important">The bot that keeps your server clean</h1>
-  <h4>So you don't have to.</h4>
+  <h2>So you don't have to.</h2>
   <span id="buttons">
     <Button=/invite target="_blank">Invite</Button>
     <Button=/dashboard>Customize</Button>
