--- a/website/html/index.html
+++ b/website/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html style="background-color: #333b52" lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <title>Censor Bot</title>
     {INDCSS}
     <style id="css"></style>
@@ -12,6 +12,12 @@
     <meta property="og:title" content="Censor Bot">
     <meta property="og:description" content="Easy to use advanced content filtering for your Discord server(s)!">
     <meta name="description" content="Advanced Anti-Swear Bot that comes with a pre-built filters, no work needed! anti swear bot">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111382716-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    </script>
 
     <link rel="icon" href="https://branding.jt3ch.net/censorbot.png">
 
