--- a/website/html/error.html
+++ b/website/html/error.html
@@ -3,4 +3,5 @@
   <h2 id="title">Loading...</h2>
   <p id="info">Loading...</p>
   <Button id="button" clicky>Loading...</Button>
+  <div style="height: 40px"></div>
 </center>
