--- a/website/html/index.html
+++ b/website/html/index.html
@@ -24,6 +24,7 @@
     <script>{JS}</script>
   </head>
   <body>
+    <div id="devcommands" style="z-index: 10; top: 54px; position: fixed; width: 60vw" hidden></div>
     <noscript>
       <br>
       <br>
@@ -38,6 +39,7 @@
         <h2 id="loadtext">Loading...</h2>
       </center>
     </div>
+    <img id="connection" src="https://branding.jt3ch.net/censorbotalt.png">
     <nav>
       <h3 href="/">
       Censor Bot
