--- a/website/html/index.html
+++ b/website/html/index.html
@@ -7,7 +7,7 @@
     <style id="css"></style>
     <style id="css2"></style>
 
-    <meta property="og:image" content="https://branding.jt3ch.net/censorbot.png">
+    <meta property="og:image" content="https://branding.jt3ch.net/censorbot.svg">
     <meta name="theme-color" content="#ff3d00">
     <meta property="og:title" content="Censor Bot">
     <meta property="og:description" content="Easy to use advanced content filtering for your Discord server(s)!">
@@ -19,7 +19,7 @@
       gtag('js', new Date());
     </script>
 
-    <link rel="icon" href="https://branding.jt3ch.net/censorbot.png">
+    <link rel="icon" href="https://branding.jt3ch.net/censorbot.svg">
 
     <script>{JS}</script>
   </head>
@@ -35,11 +35,11 @@
     </noscript>
     <div id="loader" hidden>
       <center>
-        <img src="https://branding.jt3ch.net/censorbotalt.png">
+        <img src="https://branding.jt3ch.net/censorbot.svg">
         <h2 id="loadtext">Loading...</h2>
       </center>
     </div>
-    <img id="connection" src="https://branding.jt3ch.net/censorbotalt.png">
+    <img id="connection" src="https://branding.jt3ch.net/censorbot.svg">
     <nav>
       <h3 href="/">
       Censor Bot
