--- a/website/html/landing.html
+++ b/website/html/landing.html
@@ -1,4 +1,4 @@
-<img id="logo" src="https://branding.jt3ch.net/censorbotalt.png" width="512px" height="512px" alt="Censor Bot"
+<img id="logo" src="https://branding.jt3ch.net/censorbot.svg" width="512px" height="512px" alt="Censor Bot"
   class="rollon">
 <div id="title">
   <h1 class="important">The bot that keeps your server clean</h1>
