Add new web components

--- a/website/html/index.html
+++ b/website/html/index.html
@@ -58,7 +58,19 @@
         </div>
       </span>
     </nav>
-    <div id="root"></div>
+    <div id="root">
+      <div style="height:100vh"></div>
+    </div>
+    <footer>
+      <div id="copyright">
+        <h1>Censor Bot</h1>
+        <p>Copyright &copy; 2021 JPBBots</p>
+      </div>
+      <div id="links">
+        <a href="/terms" target="_blank">Terms</a> <br>
+        <a href="/privacy" target="_blank">Privacy Policy</a>
+      </div>
+    </footer>
     <div id="toast" onclick="this.setAttribute('gone', '')" gone></div>
   </body>
 </html>
