--- a/website/html/index.html
+++ b/website/html/index.html
@@ -24,7 +24,7 @@
     <script>{JS}</script>
   </head>
   <body>
-    <div id="devcommands" style="z-index: 10; top: 54px; position: fixed; width: 60vw" hidden></div>
+    <div id="devcommands" style="z-index: 10; top: 54px; position: fixed; width: 30vw" hidden></div>
     <noscript>
       <br>
       <br>
@@ -67,6 +67,7 @@
         <p>Copyright &copy; 2021 JPBBots</p>
       </div>
       <div id="links">
+        <a href="/support" target="_blank">Get Help</a> <br>
         <a href="/terms" target="_blank">Terms</a> <br>
         <a href="/privacy" target="_blank">Privacy Policy</a>
       </div>
