Begin Chargebee integration

--- a/website/html/premium.html
+++ b/website/html/premium.html
@@ -1,25 +1,25 @@
 <center>
   <h1><Star>Censor Bot Premium<Star></h1>
 
-  <section id="premium">
+  <section id="premium-section">
     <div>
-      <h3>Supporter</h3>
+      <h3>Premium</h3>
       <h4>$5/month</h4>
       <ul>
         <li>3 Premium Servers</li>
         <li>Premium Support</li>
       </ul>
-      <Button="https://www.patreon.com/join/censorbot/checkout?rid=3106140" target="_blank" id="supporter" special>Join</Button>
+      <Button="javascript:void(0)" id="premium" function special>Buy</Button>
     </div>
     <div>
-      <h3>Super Supporter</h3>
+      <h3>Super Premium</h3>
       <h4>$10/month</h4>
       <ul>
         <li>6 Premium Servers</li>
         <li>Premium Support</li>
         <li>Beta Access</li>
       </ul>
-      <Button="https://www.patreon.com/join/censorbot/checkout?rid=3106142" target="_blank" id="super_supporter" special>Join</Button>
+      <Button="javascript:void(0)" id="super-premium" function special>Buy</Button>
     </div>
     <div>
       <h3>Own Instance</h3>
@@ -29,10 +29,9 @@
         <li>Custom avatar/username</li>
         <li>Extra feature requests allowed!</li>
       </ul>
-      <Button="https://www.patreon.com/join/censorbot/checkout?rid=6590243" target="_blank" id="own_instance" special>Join</Button>
+      <Button="javascript:void(0)" id="own-instance" function special>Buy</Button>
     </div>
   </section>
-  <small style="grid-column: span 3">All transactions and subscriptions are handled through patreon.</small>
 </center>
 <div class="sep"></div>
 <section>
