--- a/website/html/index.html
+++ b/website/html/index.html
@@ -18,6 +18,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
     </script>
+    <script src="https://js.chargebee.com/v2/chargebee.js"></script>
 
     <link rel="icon" href="https://branding.jt3ch.net/censorbot.svg">
 
