Add new retainRoles setting

--- a/website/html/index.html
+++ b/website/html/index.html
@@ -53,6 +53,7 @@
             <a href="/dashboard">Dashboard</a>
             <a href="/support" target="_blank">Support</a>
             <a href="/premium">Premium</a>
+            <a id="portal" function hidden>Portal</a>
             <a id="logout" function>Logout</a>
           </div>
         </div>
